# Nes-Emu-Cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  cartridge.cpp  cartridge.h  emulator.cpp  emulator.hpp  main.cpp  mapper.cpp  mapper.hpp  mapper0.cpp  mapper0.h  mapper0.hpp  nes_bus.cpp  nes_bus.h  nes_bus.hpp  nes_cpu.cpp  nes_cpu.h  nes_cpu.hpp  nes_ppu.cpp  nes_ppu.hpp  utils.cpp  utils.h  utils.hpp
src/cartridge/: cartridge.cpp  cartridge.hpp  mapper.cpp  mapper.hpp
src/cartridge/mapper/: mapper0.cpp  mapper0.hpp
src/controller/: controller.cpp  controller.hpp
src/cpu/: bus.cpp  bus.hpp  cpu.cpp  cpu.hpp  instruction.cpp  instruction.hpp
src/frontends/olc/: application.cpp  application.hpp  main.cpp
src/frontends/sdl3/: application.cpp  application.hpp  draw_helpers.cpp  draw_helpers.hpp  main.cpp  sdl_imgui_gl.cpp  sdl_imgui_gl.hpp  ui.cpp  ui.hpp
src/ppu/: palette.hpp  ppu.cpp  ppu.hpp  ppu_bus.cpp  ppu_bus.hpp
src/premitives/: color.hpp  sprite.cpp  sprite.hpp
